# learning-rust

./: .editorconfig  .gitignore
guessing_game/: Cargo.toml
guessing_game/src/: main.rs
the_book_notes/: README.md
the_book_notes/_03_basics/functions/: Cargo.toml
the_book_notes/_03_basics/functions/src/: main.rs
the_book_notes/_03_basics/types/: Cargo.toml
the_book_notes/_03_basics/types/src/: main.rs
the_book_notes/_03_basics/variables/: Cargo.toml
the_book_notes/_03_basics/variables/src/: main.rs
