[package]
name = "guessing_game"
version = "0.1.0"
authors = ["Kyanne Rose <dev@kyanne.email>"]
edition = "2018"
description = "A guessing game created following the Rust Book tutorial"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
