[package]
name = "guessing_game"
version = "0.1.0"
authors = ["Kyanne Rose <dev@kyanne.email>"]
edition = "2018"
description = "A guessing game created following the Rust Book tutorial"
homepage = "https://github.com/kyrose/learning-rust/tree/main/guessing_game#readme"
repository = "https://github.com/kyrose/learning-rust/tree/main/guessing_game"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.5.5"
